--- a/src/main.css
+++ b/src/main.css
@@ -6,7 +6,7 @@
 }
 
 ::selection {
-  background: #00d2ff;
+  background: #348952;
 }
 
 html,
@@ -37,8 +37,8 @@ body:before {
   content: "";
   width: 100%;
   height: 10px;
-  background: #00d2ff;
-  background: linear-gradient(to right, #3a7bd5, #00d2ff);
+  background: #348952;
+  background: linear-gradient(to right, #348952, #92d93d);
 }
 
 section {
@@ -52,12 +52,12 @@ p {
 }
 
 a {
-  color: #3a7bd5;
+  color: #43aa6a;
   transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #00d2ff;
+  color: #348952;
 }
 
 h1 {
@@ -115,7 +115,7 @@ ul > li:before {
   left: 0;
   display: inline-block;
   content: "•";
-  color: #3a7bd5;
+  color: #348952;
 }
 
 .container {
@@ -125,7 +125,7 @@ ul > li:before {
 }
 
 .period-mark {
-  color: #3a7bd5;
+  color: #348952;
 }
 
 .big-paragraph {
