--- a/src/main.css
+++ b/src/main.css
@@ -38,7 +38,7 @@ body:before {
   width: 100%;
   height: 10px;
   background: #348952;
-  background: linear-gradient(to right, #348952, #92d93d);
+  background: linear-gradient(to right, #348952, #eeff00);
 }
 
 section {
